# bitchat-python

./: Manifest.in  README.md  VERSION.txt  bitchat.py  compression.py  encryption.py  packet_analyzer.py  persistence.py  pyproject.toml  requirements.txt  setup.py  terminal_ux.py  test_handshake.py  test_handshake_failure.py  test_identity_announcement.py
.github/workflows/: mypy.yml  pytest.yml  ruff.yml
debuglogs/: ios  pythoncli
dummy/: bitchat.py  ble_service.py  compression_util.py  encryption.py  persistence.py  protocol.py  terminal_ux.py
src/bitchat_python/: __main__.py  _logger.py  _version.py  bitchat.py  compression.py  encryption.py  fragmentation.py  persistence.py  terminal_ux.py
src/bitchat_python/_compat/: __init__.py  ainput.py  pythonista.py
tests/: test_identity_announcement.py
